Fixed pricing table not having white space on the bottom.

--- a/src/Pricing.css
+++ b/src/Pricing.css
@@ -7,7 +7,7 @@
 .price {
   list-style-type: none;
   border: 1px solid #eee;
-  margin: 0;
+  margin-bottom: 30px;
   padding: 0;
   -webkit-transition: 0.3s;
   transition: 0.3s;
